--- a/ShipmentTrackingSite/ShipmentTrackingSite/Views/Home/Index.cshtml
+++ b/ShipmentTrackingSite/ShipmentTrackingSite/Views/Home/Index.cshtml
@@ -73,16 +73,40 @@
                         <td class="@warn">@order.DeliveryDate?.ToShortDateString()</td>
                         <td>$@String.Format("{0:0.00}", order.Cost)</td>
                         <td>$@String.Format("{0:0.00}", order.ShipmentFee)</td>
-
-
-
                     </tr>
                 }
             </tbody>
         </table>
         <br />
+        <h2>| Filter Tool&#128270; |</h2>
+
+        <form method="post">
+
+            <div class="form-group">
+                <label>Carrier:</label>
+                <input type="text" name="Carrier" class="form-control">
+            </div>
+
+            <div class="form-group">
+                <label>Order from:</label>
+                <input type="text" name="OrderedFrom" class="form-control mb-4">
+            </div>
+
+
+            <button type="submit" class="btn btn-primary">Search</button>
+            <a asp-action="Index" class="btn btn-primary">Cancel</a>
+            <br />
+
+        </form>
+
 
     </div>
+
+}
+else
+{
+    <p>Data Not Found!</p>
+    <br />
+    <a href="/Home/Index">Home</a>
 }
 
-<hr />
