Resolved major bug. Proj 99% done.

--- a/ShipmentTrackingSite/ShipmentTrackingSite/Views/Home/Index.cshtml
+++ b/ShipmentTrackingSite/ShipmentTrackingSite/Views/Home/Index.cshtml
@@ -78,7 +78,7 @@
             </tbody>
         </table>
         <br />
-        <h2>| Filter Tool&#128270; |</h2>
+        <h2><strong>| Filter Tool&#128270; |</strong></h2>
 
         <form method="post">
 
