Added cool BG. Done with proj.

--- a/ShipmentTrackingSite/ShipmentTrackingSite/Views/Shared/_Layout.cshtml
+++ b/ShipmentTrackingSite/ShipmentTrackingSite/Views/Shared/_Layout.cshtml
@@ -45,8 +45,8 @@
             @RenderBody()
         </main>
     </div>
-
-    <footer class="border-top footer text-muted">
+    <hr />
+    <footer class="footer text-muted">
         <div class="container">
             &copy; 2022 - Shipify&#9992; - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
