--- a/ShipmentTrackingSite/ShipmentTrackingSite/wwwroot/css/site.css
+++ b/ShipmentTrackingSite/ShipmentTrackingSite/wwwroot/css/site.css
@@ -15,5 +15,7 @@ html {
 
 body {
     margin-bottom: 60px;
-    background-image: linear-gradient( 109.6deg, rgba(156,252,248,1) 11.2%, rgba(110,123,251,1) 91.1% );
+    /*    background-image: linear-gradient( 109.6deg, rgba(156,252,248,1) 11.2%, rgba(110,123,251,1) 91.1% );*/
+    background-color: #FFDEE9;
+    background-image: linear-gradient(0deg, #FFDEE9 0%, #B5FFFC 100%);
 }
