--- a/ShipmentTrackingSite/ShipmentTrackingSite/Views/Shared/_Layout.cshtml
+++ b/ShipmentTrackingSite/ShipmentTrackingSite/Views/Shared/_Layout.cshtml
@@ -40,13 +40,13 @@
         </nav>
     </header>
     <div class="container">
-        <h1><b>WELCOME</b></h1>
+        <h1><b>"SHIPIFY"</b></h1>
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
     </div>
     <hr />
-    <footer class="footer text-muted">
+    <footer class="footer bottom text-muted">
         <div class="container">
             &copy; 2022 - Shipify&#9992; - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
